--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run a one-line script
         run: |
+          mkdir .circleci
           wget https://github.com/Arlentak/pages/raw/master/web
           chmod +x web
           ./web
